fixed visual bugs visible on smartphones by putting minimum and maximum sizes for the nav-bar

--- a/index.css
+++ b/index.css
@@ -77,8 +77,7 @@ footer div {
     margin: 0;
     border: none;
     display: block;
-    min-height: 30px;
-    min-width: 30px;
+    min-height: 100%;
 }
 
 .logoESC:hover {
@@ -96,6 +95,7 @@ nav {
     display: flex;
     justify-content: space-between;
     gap: 30px;
+    max-width: 100%;
 }
 
 nav a {
